--- a/index.html
+++ b/index.html
@@ -205,7 +205,16 @@ margin:20px;
 <p style="font-size:20px">
 Nagroda dla Ciebie 😘  
 Rozwiąż zagadkę, którą dostałeś na kartce...
-</p>
+</p>                <div style="margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap;">
+  <input id="quizInput" placeholder="Wpisz hasło z kartki..."
+    style="padding:12px 14px; border-radius:999px; border:2px solid hotpink; outline:none; font-size:16px;">
+  <button id="quizBtn"
+    style="padding:12px 16px; border-radius:999px; border:2px solid hotpink; background:black; color:pink; font-weight:700;">
+    Odbierz nagrodę 💖
+  </button>
+</div>
+
+<p id="quizMsg" style="margin-top:12px; opacity:.9;"></p>
 
 <audio id="winMusic" src="win.mp3"></audio>
 
