--- a/index.html
+++ b/index.html
@@ -1,233 +1,167 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Walentynkowe Kotki 💘</title>
-  <style>
-    body { font-family: system-ui, Arial; margin: 0; background:#fff; }
-    .wrap { max-width: 900px; margin: 0 auto; padding: 24px; text-align:center; }
-    h1 { margin: 8px 0 4px; }
-    p { margin: 0 0 16px; opacity: .8; }
-    canvas { border: 3px solid #111; border-radius: 14px; background: #f8f8f8; max-width: 100%; height: auto; }
-    .bar { display:flex; gap:12px; justify-content:center; align-items:center; flex-wrap:wrap; margin: 14px 0; }
-    button { padding: 10px 14px; border-radius: 999px; border:2px solid #111; background:#fff; cursor:pointer; font-weight:600; }
-    .pill { padding: 8px 12px; border-radius: 999px; border:2px solid #111; background:#fff; font-weight:600; }
-    .hint { font-size: 13px; opacity:.7; margin-top:10px; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Walentykowe Kotki 💗</title>
+
+<style>
+body{
+  margin:0;
+  font-family:system-ui;
+  background:black;
+  color:pink;
+  display:flex;
+  justify-content:center;
+}
+
+#wrap{max-width:900px;padding:20px;text-align:center;}
+
+canvas{
+  background:#050505;
+  border:3px solid hotpink;
+  border-radius:14px;
+  width:100%;
+}
+
+button,input{
+  padding:12px 16px;
+  border-radius:999px;
+  border:2px solid hotpink;
+  background:black;
+  color:pink;
+  font-weight:700;
+}
+
+#winScreen{
+  position:fixed;
+  inset:0;
+  background:black;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  gap:16px;
+  z-index:10;
+}
+
+#reward img{max-width:280px;border-radius:16px;}
+</style>
 </head>
+
 <body>
-  <div class="wrap">
-    <h1>Walentynkowe Kotki 💘</h1>
-    <p>Steruj kotkami, zbieraj serduszka. (WASD + strzałki)</p>
+<div id="wrap">
+<h2>Walentykowe Kotki 💕</h2>
+<p>⬅️➡️⬆️⬇️ = kot 1 | WASD = kot 2</p>
 
-    <div class="bar">
-      <div class="pill">Punkty: <span id="score">0</span></div>
-      <button id="restart">Restart</button>
-    </div>
+<canvas id="game" width="800" height="500"></canvas>
+</div>
 
-    <canvas id="game" width="800" height="500"></canvas>
-    <div class="hint">Tip: Jak chcesz, później dodamy „wygraną wiadomość” dla chłopaka 💌</div>
+<!-- WIN -->
+<div id="winScreen">
+  <h2>Rozwiąż zagadkę 💌</h2>
+  <p>(hasło z kartki)</p>
+
+  <input id="quizInput" placeholder="Wpisz hasło...">
+  <button id="quizBtn">Odbierz nagrodę 💖</button>
+
+  <p id="quizMsg"></p>
+
+  <div id="reward" style="display:none">
+    <img src="IMG_2704.jpeg">
+    <p>KOCHAM CIĘ NAJMNIEJ 🥹💗</p>
   </div>
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
-    const scoreEl = document.getElementById("score");
-    const restartBtn = document.getElementById("restart");
-
-    const keys = {};
-    window.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
-    window.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
-
-    function rand(min,max){ return Math.random()*(max-min)+min; }
-
-    let score, heart, cat1, cat2, msgTimer;
-
-    function reset(){
-      score = 0; msgTimer = 0;
-      cat1 = { x: 220, y: 260, r: 18, speed: 3.2, color: "#111", name:"Kotek 1" };
-      cat2 = { x: 580, y: 260, r: 18, speed: 3.2, color: "#111", name:"Kotek 2" };
-      heart = { x: rand(80,720), y: rand(80,420), r: 14 };
-      scoreEl.textContent = score;
-    }
-
-    function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
-
-    function drawCat(c){
-      // kotek: głowa + uszy + oczka
-      ctx.lineWidth = 3;
-      ctx.strokeStyle = c.color;
-      ctx.fillStyle = "transparent";
-
-      // głowa
-      ctx.beginPath(); ctx.arc(c.x, c.y, c.r, 0, Math.PI*2); ctx.stroke();
-
-      // uszy
-      ctx.beginPath();
-      ctx.moveTo(c.x - c.r*0.6, c.y - c.r*0.8);
-      ctx.lineTo(c.x - c.r*0.2, c.y - c.r*1.35);
-      ctx.lineTo(c.x, c.y - c.r*0.75);
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.moveTo(c.x + c.r*0.6, c.y - c.r*0.8);
-      ctx.lineTo(c.x + c.r*0.2, c.y - c.r*1.35);
-      ctx.lineTo(c.x, c.y - c.r*0.75);
-      ctx.stroke();
-
-      // oczy
-      ctx.beginPath(); ctx.arc(c.x - c.r*0.25, c.y - c.r*0.1, 2.5, 0, Math.PI*2); ctx.stroke();
-      ctx.beginPath(); ctx.arc(c.x + c.r*0.25, c.y - c.r*0.1, 2.5, 0, Math.PI*2); ctx.stroke();
-
-      // pyszczek
-      ctx.beginPath();
-      ctx.moveTo(c.x, c.y + 2);
-      ctx.lineTo(c.x, c.y + 8);
-      ctx.moveTo(c.x, c.y + 8);
-      ctx.lineTo(c.x - 8, c.y + 14);
-      ctx.moveTo(c.x, c.y + 8);
-      ctx.lineTo(c.x + 8, c.y + 14);
-      ctx.stroke();
-    }
-
-    function drawHeart(h){
-      ctx.lineWidth = 3;
-      ctx.strokeStyle = "#111";
-      const x = h.x, y = h.y, s = h.r;
-      ctx.beginPath();
-      ctx.moveTo(x, y + s*0.6);
-      ctx.bezierCurveTo(x - s*1.2, y - s*0.2, x - s*0.6, y - s*1.2, x, y - s*0.6);
-      ctx.bezierCurveTo(x + s*0.6, y - s*1.2, x + s*1.2, y - s*0.2, x, y + s*0.6);
-      ctx.closePath();
-      ctx.stroke();
-    }
-
-    function dist(a,b){ return Math.hypot(a.x-b.x, a.y-b.y); }
-
-    function update(){
-      // sterowanie: kotek1 WASD, kotek2 strzałki
-      if(keys["w"]) cat1.y -= cat1.speed;
-      if(keys["s"]) cat1.y += cat1.speed;
-      if(keys["a"]) cat1.x -= cat1.speed;
-      if(keys["d"]) cat1.x += cat1.speed;
-
-      if(keys["arrowup"]) cat2.y -= cat2.speed;
-      if(keys["arrowdown"]) cat2.y += cat2.speed;
-      if(keys["arrowleft"]) cat2.x -= cat2.speed;
-      if(keys["arrowright"]) cat2.x += cat2.speed;
-
-      cat1.x = clamp(cat1.x, 30, canvas.width-30);
-      cat1.y = clamp(cat1.y, 40, canvas.height-30);
-      cat2.x = clamp(cat2.x, 30, canvas.width-30);
-      cat2.y = clamp(cat2.y, 40, canvas.height-30);
-
-      // zbieranie serduszka: wystarczy że którykolwiek dotknie
-      const hit = (Math.hypot(cat1.x-heart.x, cat1.y-heart.y) < (cat1.r+heart.r)) ||
-                  (Math.hypot(cat2.x-heart.x, cat2.y-heart.y) < (cat2.r+heart.r));
-      if(hit){
-        score += 1;
-        scoreEl.textContent = score;
-        heart.x = rand(60, canvas.width-60);
-        heart.y = rand(80, canvas.height-60);
-        if(score % 10 === 0) msgTimer = 120; // pokaż komunikat na chwilę
-      }
-    }
-
-    function draw(){
-      ctx.clearRect(0,0,canvas.width,canvas.height);
-
-      // ramka i malutkie serduszka tła
-      ctx.lineWidth = 3;
-      ctx.strokeStyle = "#111";
-      ctx.strokeRect(12,12,canvas.width-24,canvas.height-24);
-
-      for(let i=0;i<18;i++){
-        const hx = (i*43 + 37) % canvas.width;
-        const hy = (i*71 + 60) % canvas.height;
-        ctx.save(); ctx.globalAlpha = 0.25;
-        drawHeart({x:hx, y:hy, r:8});
-        ctx.restore();
-      }
-
-      drawHeart(heart);
-      drawCat(cat1);
-      drawCat(cat2);
-
-      // mini „walentynkowość”: jak kotki się dotkną, pojawia się serduszko
-      if(dist(cat1,cat2) < cat1.r + cat2.r + 6){
-        drawHeart({x:(cat1.x+cat2.x)/2, y:(cat1.y+cat2.y)/2 - 28, r:10});
-      }
-
-      if(msgTimer > 0){
-        msgTimer--;
-        ctx.font = "700 26px system-ui";
-        ctx.fillStyle = "#111";
-        ctx.fillText("💌 Bonus: 10 serduszek! Kocham Cię!", 170, 50);
-      }
-    }
-
-    function loop(){
-      update();
-      draw();
-      requestAnimationFrame(loop);
-    }
-
-    restartBtn.addEventListener("click", reset);
-
-    reset();
-    loop();
-  </script> <!-- WIN SCREEN -->
-<div id="winScreen" style="
-display:none;
-position:fixed;
-inset:0;
-background:black;
-color:pink;
-z-index:9999;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-font-family:system-ui;
-">
-
-<h1>💗 Wygrałeś 💗</h1>
-
-<img src="IMG_2704.jpeg" style="
-max-width:80%;
-border-radius:20px;
-border:4px solid pink;
-box-shadow:0 0 30px hotpink;
-margin:20px;
-">
-
-<p style="font-size:20px">
-Nagroda dla Ciebie 😘  
-Rozwiąż zagadkę, którą dostałeś na kartce...
-       <div style="margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap;">
-  <input id="quizInput" placeholder="Wpisz hasło z kartki..."
-    style="padding:12px 14px; border-radius:999px; border:2px solid hotpink; outline:none; font-size:16px;">
-  <button id="quizBtn"
-    style="padding:12px 16px; border-radius:999px; border:2px solid hotpink; background:black; color:pink; font-weight:700;">
-    Odbierz nagrodę 💖
-  </button>
+  <audio id="winMusic" src="win.mp3"></audio>
 </div>
 
-<p id="quizMsg" style="margin-top:12px; opacity:.9;"></p>      </p>                <div style="margin-top:14px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap;">
-  <input id="quizInput" placeholder="Wpisz hasło z kartki..."
-    style="padding:12px 14px; border-radius:999px; border:2px solid hotpink; outline:none; font-size:16px;">
-  <button id="quizBtn"
-    style="padding:12px 16px; border-radius:999px; border:2px solid hotpink; background:black; color:pink; font-weight:700;">
-    Odbierz nagrodę 💖
-  </button> </div>
+<script>
+const c = game.getContext("2d");
 
-<p id="quizMsg" style="margin-top:12px; opacity:.9;"></p>
+let level=0;
 
-<audio id="winMusic" src="win.mp3"></audio>
-<div id="reward" style="display:none; margin-top:14px; font-size:22px;">
-  🎁 Nagroda od Misi: KOCHAM CIĘ 💗
-</div>
-</div>
+const cats=[
+ {x:80,y:400,color:"pink",keys:{l:37,r:39,u:38,d:40}},
+ {x:160,y:400,color:"white",keys:{l:65,r:68,u:87,d:83}}
+];
+
+const door={x:700,y:380,w:60,h:80};
+
+const keys={};
+onkeydown=e=>keys[e.keyCode]=1;
+onkeyup=e=>keys[e.keyCode]=0;
+
+function bg(){
+  const p=Math.min(level*40,150);
+  return `rgb(${p},0,${p})`;
+}
+
+function drawCat(ca){
+ c.fillStyle=ca.color;
+ c.beginPath();
+ c.arc(ca.x,ca.y,14,0,Math.PI*2);
+ c.fill();
+}
+
+function updateCat(ca){
+ if(keys[ca.keys.l]) ca.x-=3;
+ if(keys[ca.keys.r]) ca.x+=3;
+ if(keys[ca.keys.u]) ca.y-=3;
+ if(keys[ca.keys.d]) ca.y+=3;
+ ca.x=Math.max(10,Math.min(790,ca.x));
+ ca.y=Math.max(10,Math.min(490,ca.y));
+}
+
+function near(a,b){
+ return Math.hypot(a.x-b.x,a.y-b.y)<40;
+}
+
+const winScreen=document.getElementById("winScreen");
+const quizBtn=document.getElementById("quizBtn");
+const quizInput=document.getElementById("quizInput");
+const quizMsg=document.getElementById("quizMsg");
+const reward=document.getElementById("reward");
+const music=document.getElementById("winMusic");
+
+const ANSWER="KOTEK";
+
+quizBtn.onclick=async()=>{
+ if(quizInput.value.toUpperCase()==ANSWER){
+   quizMsg.textContent="DOBRZE 😭💗";
+   reward.style.display="block";
+   try{await music.play()}catch{}
+ }else quizMsg.textContent="Spróbuj jeszcze 🥺";
+};
+
+function loop(){
+ c.fillStyle=bg();
+ c.fillRect(0,0,800,500);
+
+ cats.forEach(updateCat);
+ cats.forEach(drawCat);
+
+ // drzwi
+ c.strokeStyle="hotpink";
+ c.strokeRect(door.x,door.y,door.w,door.h);
+ c.fillText("💗",door.x+18,door.y+50);
+
+ // serduszko gdy blisko
+ if(near(cats[0],cats[1])){
+   c.font="20px serif";
+   c.fillText("💗",(cats[0].x+cats[1].x)/2,(cats[0].y+cats[1].y)/2-20);
+ }
+
+ // win
+ const inDoor=ca=>ca.x>door.x && ca.x<door.x+door.w && ca.y>door.y;
+
+ if(inDoor(cats[0]) && inDoor(cats[1])){
+   winScreen.style.display="flex";
+ }
+
+ requestAnimationFrame(loop);
+}
+
+loop();
+</script>
 </body>
 </html>
