--- a/index.html
+++ b/index.html
@@ -1,167 +1,193 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Walentykowe Kotki 💗</title>
+<title>Walentynkowe Kotki 💕</title>
 
 <style>
 body{
   margin:0;
+  background:linear-gradient(#050505,#150018);
+  color:#ffd6f0;
   font-family:system-ui;
-  background:black;
-  color:pink;
   display:flex;
   justify-content:center;
 }
 
-#wrap{max-width:900px;padding:20px;text-align:center;}
-
-canvas{
-  background:#050505;
-  border:3px solid hotpink;
-  border-radius:14px;
-  width:100%;
+#wrapper{
+  max-width:900px;
+  padding:20px;
+  text-align:center;
 }
 
-button,input{
-  padding:12px 16px;
-  border-radius:999px;
-  border:2px solid hotpink;
-  background:black;
-  color:pink;
+h1{font-size:34px}
+
+canvas{
+  background:#080008;
+  border:3px solid hotpink;
+  border-radius:18px;
+  box-shadow:0 0 30px #ff4fcf;
+}
+
+#ui{
+  margin-top:10px;
+}
+
+button{
+  background:#ff6ad5;
+  border:none;
+  padding:10px 18px;
+  border-radius:12px;
   font-weight:700;
 }
 
-#winScreen{
+.hidden{display:none}
+
+#overlay{
   position:fixed;
   inset:0;
-  background:black;
-  display:none;
+  background:rgba(0,0,0,.95);
+  display:flex;
   align-items:center;
   justify-content:center;
   flex-direction:column;
-  gap:16px;
-  z-index:10;
+  color:pink;
+  z-index:99;
 }
-
-#reward img{max-width:280px;border-radius:16px;}
+#overlay img{
+  max-width:80%;
+  border-radius:20px;
+  box-shadow:0 0 40px hotpink;
+}
 </style>
 </head>
 
 <body>
-<div id="wrap">
-<h2>Walentykowe Kotki 💕</h2>
-<p>⬅️➡️⬆️⬇️ = kot 1 | WASD = kot 2</p>
 
-<canvas id="game" width="800" height="500"></canvas>
+<div id="wrapper">
+<h1>Walentynkowe Kotki 💕</h1>
+<p>⬅️➡️ = kot 1 | WASD = kot 2</p>
+
+<canvas id="game" width="820" height="460"></canvas>
+
+<div id="ui">
+<button onclick="restart()">Restart</button>
+</div>
 </div>
 
-<!-- WIN -->
-<div id="winScreen">
-  <h2>Rozwiąż zagadkę 💌</h2>
-  <p>(hasło z kartki)</p>
-
-  <input id="quizInput" placeholder="Wpisz hasło...">
-  <button id="quizBtn">Odbierz nagrodę 💖</button>
-
-  <p id="quizMsg"></p>
-
-  <div id="reward" style="display:none">
-    <img src="IMG_2704.jpeg">
-    <p>KOCHAM CIĘ NAJMNIEJ 🥹💗</p>
-  </div>
-
-  <audio id="winMusic" src="win.mp3"></audio>
+<div id="overlay" class="hidden">
+<h2 id="overlayText"></h2>
+<img id="finalPhoto"/>
+<audio id="music" src="win.mp3"></audio>
+<button onclick="closeOverlay()">OK 💖</button>
 </div>
 
 <script>
-const c = game.getContext("2d");
+const canvas=document.getElementById("game");
+const ctx=canvas.getContext("2d");
+
+let keys={};
+
+document.addEventListener("keydown",e=>keys[e.key]=true);
+document.addEventListener("keyup",e=>keys[e.key]=false);
+
+const cat1={x:100,y:200,c:"#ffb3d9"};
+const cat2={x:160,y:200,c:"#9ae7ff"};
 
 let level=0;
 
-const cats=[
- {x:80,y:400,color:"pink",keys:{l:37,r:39,u:38,d:40}},
- {x:160,y:400,color:"white",keys:{l:65,r:68,u:87,d:83}}
+const levels=[
+ {door:{x:700,y:170}},
+ {door:{x:50,y:50}},
+ {door:{x:700,y:300}}
 ];
 
-const door={x:700,y:380,w:60,h:80};
-
-const keys={};
-onkeydown=e=>keys[e.keyCode]=1;
-onkeyup=e=>keys[e.keyCode]=0;
-
-function bg(){
-  const p=Math.min(level*40,150);
-  return `rgb(${p},0,${p})`;
+function drawCat(c){
+ ctx.beginPath();
+ ctx.arc(c.x,c.y,12,0,Math.PI*2);
+ ctx.fillStyle=c.c;
+ ctx.fill();
 }
 
-function drawCat(ca){
- c.fillStyle=ca.color;
- c.beginPath();
- c.arc(ca.x,ca.y,14,0,Math.PI*2);
- c.fill();
+function controls(){
+ if(keys.ArrowLeft)cat1.x-=3;
+ if(keys.ArrowRight)cat1.x+=3;
+ if(keys.ArrowUp)cat1.y-=3;
+ if(keys.ArrowDown)cat1.y+=3;
+
+ if(keys.a)cat2.x-=3;
+ if(keys.d)cat2.x+=3;
+ if(keys.w)cat2.y-=3;
+ if(keys.s)cat2.y+=3;
 }
 
-function updateCat(ca){
- if(keys[ca.keys.l]) ca.x-=3;
- if(keys[ca.keys.r]) ca.x+=3;
- if(keys[ca.keys.u]) ca.y-=3;
- if(keys[ca.keys.d]) ca.y+=3;
- ca.x=Math.max(10,Math.min(790,ca.x));
- ca.y=Math.max(10,Math.min(490,ca.y));
+function drawDoor(){
+ let d=levels[level].door;
+ ctx.strokeStyle="hotpink";
+ ctx.lineWidth=3;
+ ctx.strokeRect(d.x,d.y,40,60);
+ ctx.fillText("💗",d.x+8,d.y+38);
 }
 
-function near(a,b){
- return Math.hypot(a.x-b.x,a.y-b.y)<40;
+function checkTogether(){
+ const dx=cat1.x-cat2.x;
+ const dy=cat1.y-cat2.y;
+ return Math.hypot(dx,dy)<28;
 }
 
-const winScreen=document.getElementById("winScreen");
-const quizBtn=document.getElementById("quizBtn");
-const quizInput=document.getElementById("quizInput");
-const quizMsg=document.getElementById("quizMsg");
-const reward=document.getElementById("reward");
-const music=document.getElementById("winMusic");
+function drawHeart(){
+ ctx.fillText("💗",(cat1.x+cat2.x)/2-5,(cat1.y+cat2.y)/2-15);
+}
 
-const ANSWER="KOTEK";
+function nextLevel(){
+ level++;
+ if(level>=levels.length){
+   showFinal();
+ }
+}
 
-quizBtn.onclick=async()=>{
- if(quizInput.value.toUpperCase()==ANSWER){
-   quizMsg.textContent="DOBRZE 😭💗";
-   reward.style.display="block";
-   try{await music.play()}catch{}
- }else quizMsg.textContent="Spróbuj jeszcze 🥺";
-};
+function showFinal(){
+ document.getElementById("overlay").classList.remove("hidden");
+ document.getElementById("overlayText").innerText="Wygrałaś 💖 Teraz nagroda…";
+ document.getElementById("finalPhoto").src="IMG_2704.jpeg";
+ document.getElementById("music").play();
+}
 
-function loop(){
- c.fillStyle=bg();
- c.fillRect(0,0,800,500);
+function restart(){
+ cat1.x=100;
+ cat2.x=160;
+ level=0;
+}
 
- cats.forEach(updateCat);
- cats.forEach(drawCat);
+function update(){
+ ctx.clearRect(0,0,canvas.width,canvas.height);
+ ctx.font="20px Arial";
 
- // drzwi
- c.strokeStyle="hotpink";
- c.strokeRect(door.x,door.y,door.w,door.h);
- c.fillText("💗",door.x+18,door.y+50);
+ controls();
+ drawCat(cat1);
+ drawCat(cat2);
+ drawDoor();
 
- // serduszko gdy blisko
- if(near(cats[0],cats[1])){
-   c.font="20px serif";
-   c.fillText("💗",(cats[0].x+cats[1].x)/2,(cats[0].y+cats[1].y)/2-20);
+ if(checkTogether())drawHeart();
+
+ const d=levels[level].door;
+ if(cat1.x>d.x && cat1.x<d.x+40 &&
+    cat2.x>d.x && cat2.x<d.x+40 &&
+    cat1.y>d.y && cat1.y<d.y+60 &&
+    cat2.y>d.y && cat2.y<d.y+60){
+     nextLevel();
  }
 
- // win
- const inDoor=ca=>ca.x>door.x && ca.x<door.x+door.w && ca.y>door.y;
-
- if(inDoor(cats[0]) && inDoor(cats[1])){
-   winScreen.style.display="flex";
- }
-
- requestAnimationFrame(loop);
+ requestAnimationFrame(update);
 }
 
-loop();
+update();
+
+function closeOverlay(){
+ location.reload();
+}
 </script>
+
 </body>
 </html>
